--- a/src/templates/onedsoni/basic_page.html
+++ b/src/templates/onedsoni/basic_page.html
@@ -16,7 +16,7 @@
     <link rel="text/javascript" href="{% static "/js/bootstrap.min.css" %}">
     {% block basic_head_block %}
     {% endblock %}
-    <title>Diwanshu Soni: Machine Learning Projects</title>
+    <title>diwanshu_soni: Machine Learning Projects</title>
 
     <style>
       .bd-placeholder-img {
