--- a/src/templates/image_toolkit/image.html
+++ b/src/templates/image_toolkit/image.html
@@ -90,6 +90,9 @@
     <footer class="text-muted">
       <div class="container">
         <p class="float-left">
+          <a href="https://www.github.com/1dsoni/onedsoni" target="_blank">@Github</a>
+        </p>
+        <p class="float-left">
           <a href="http://www.diwanshusoni.me" target="_blank">diwanshusoni.me</a>
         </p>
       </div>
