--- a/src/templates/onedsoni/basic_page.html
+++ b/src/templates/onedsoni/basic_page.html
@@ -7,13 +7,13 @@
     <meta name="description" content="Simple Machine Learning Projects Hosted">
     <meta name="author" content="Diwanshu Soni">
 
-    <link rel="stylesheet" href="{% static "/css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <!-- <link rel="stylesheet" href="{% static "css/master/aboutme.css" %}">
     <link rel="stylesheet" href="{% static "css/master/flipping_me.css" %}"> -->
 
 
 
-    <link rel="text/javascript" href="{% static "/js/bootstrap.min.css" %}">
+    <link rel="text/javascript" href="{% static "js/bootstrap.min.css" %}">
     {% block basic_head_block %}
     {% endblock %}
     <title>diwanshu_soni: Machine Learning Projects</title>
