--- a/src/templates/image_toolkit/image.html
+++ b/src/templates/image_toolkit/image.html
@@ -43,7 +43,7 @@
 
             <div class="  col-xs-12 col-sm-12 col-md-6">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="{% static "/temp_marked/opencv_faces.jpg" %}" alt="Card image cap">
+                <img class="card-img-top" src="{% static "temp_marked/opencv_faces.jpg" %}" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text">Opencv Face Detection.</p>
                   <p class="card-text">Face count : {{opencv_results.num_faces}}</p>
@@ -53,7 +53,7 @@
 
             <div class="  col-xs-12 col-sm-12 col-md-6">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="{% static "/temp_marked/dlib_faces.jpg" %}" alt="Card image cap">
+                <img class="card-img-top" src="{% static "temp_marked/dlib_faces.jpg" %}" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text">Dlib Face Detection.</p>
                   <p class="card-text">Face count : {{dlib_results.num_faces}}</p>
@@ -63,7 +63,7 @@
 
             <div class="  col-xs-12 col-sm-12 col-md-6">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="{% static "/temp_marked/dlib_faces_with_features.jpg" %}" alt="Card image cap">
+                <img class="card-img-top" src="{% static "temp_marked/dlib_faces_with_features.jpg" %}" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text">Dlib Facial Features Detection.</p>
                 </div>
